fix: openapi support for new routes
